[package]
name = "ark-marlin"
version = "0.3.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Psi Vesely <psi@ucsd.edu>",
  "Nicholas Ward <npward@berkeley.edu>",
  "arkworks contributors"
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/arkworks-rs/marlin"
documentation = "https://docs.rs/ark-marlin/"
keywords = ["cryptography", "commitments", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "wee_alloc", "js-sys", "serde", "serde-wasm-bindgen", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "marlin_demo"
path = "src/demo_cli.rs"

[[bin]]
name = "constraint_tester"
path = "src/constraint_tester.rs"

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = ["std"] }
ark-ff = { version = "^0.3.0", default-features = false, features = ["std"] }
ark-std = { version = "^0.3.0", default-features = false, features = ["std"] }
ark-poly = { version = "^0.3.0", default-features = false, features = ["std"] }
ark-relations = { version = "^0.3.0", default-features = false, features = ["std"] }
ark-poly-commit = { version = "^0.3.0", default-features = false, features = ["std"] }

rayon = { version = "1", optional = true }
digest = { version = "0.9" }
derivative = { version = "2", features = ["use_core"] }
serde_json = "1.0"
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }

# WebAssembly dependencies (optional)
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }




[dev-dependencies]
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-mnt4-298 = { version = "^0.3.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }
ark-mnt4-753 = { version = "^0.3.0", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-753 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true
panic = 'abort'

[profile.test]